syntax = "proto3";
package models;
option go_package = "./models";

import "gorm.proto";

message TokenTransfer {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {primary_key: true}];
  int64  log_index = 2 [(gorm.field).tag = {primary_key: true}];
  string token_contract_address = 3 [(gorm.field).tag = {index: "token_transfer_idx_token_contract_address"}];
  string from_address = 4 [(gorm.field).tag = {index: "token_transfer_idx_from_address"}];
  string to_address = 5 [(gorm.field).tag = {index: "token_transfer_idx_to_address"}];
  int64 block_number = 6 [(gorm.field).tag = {index: "token_transfer_idx_block_number"}];
  string value = 7;
  double value_decimal = 8;
  int64 block_timestamp = 9;
  string token_contract_name = 10;
  string token_contract_symbol = 11;
  string transaction_fee = 12;
}
